feat: add gas station
