# src/routes/index.ts
@@ -1,12 +1,10 @@
-import authRouter from "@/modules/auth/auth.routes";
+import gasStationRouter from "@/modules/gas-station/gas-station.routes";
 import healthRouter from "@/modules/health/health.routes";
-import userRouter from "@/modules/user/user.routes";
 import express from "express";
 
 const router = express.Router();
 
 router.use(healthRouter);
-router.use(userRouter);
-router.use(authRouter);
+router.use(gasStationRouter);
 
 export { router };
